--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
         <ul class="social-icon">
           <li> <i class="fab fa-facebook-f"></i> </li>
           <li> <i class="fab fa-instagram"></i> </li>
-          <li> <i class="fab fa-twitter"></i> </li>
+          <li> <i class="fa-brands fa-x-twitter"></i> </li>
           <li> <i class="fab fa-youtube"></i> </li>
         </ul>
       </div>
@@ -434,7 +434,7 @@
   <!-- Footer Bottom Legal Section Start -->
 
   <div class="legal">
-    <p>Copyright (c) 2023. All Rights Reserved. <br> Design By : Irfan Khan</p>
+    <p>Copyright (c) 2024. All Rights Reserved. <br> Design By : Sadia Islam</p>
   </div>
 
   <!-- Header Section Script -->
